force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/LLC_BI__Ownership_Structure_Role__c.object-meta.xml
<CustomObject>
    <label>Ownership Structure Role</label>
    <nameField>
        <label>Ownership Structure Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownership Structure Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>