force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/WKDDP__Description__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Description__c</fullName>
    <description>Administrators populate this optional text field with a description of the other rights at death option.</description>
    <inlineHelpText>Enter a description of the other rights at death option.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>