force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/WKDDP__Exercise_Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Exercise_Type__c</fullName>
    <description>Users select whether the power of attorneys for the holder may exercise powers independently or jointly from this optional picklist.</description>
    <inlineHelpText>Select whether the power of attorneys for the holder may exercise powers independently or jointly.</inlineHelpText>
    <label>Exercise Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independently</fullName>
            </value>
            <value>
                <fullName>Jointly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>