force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/WKDDP__Form_Power_Of_Attorney_Indicator__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Form_Power_Of_Attorney_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field to indicate if a true separate Power of Attorney (POA) document is desired. By default, it is false.</description>
    <inlineHelpText>Select the checkbox to indicate a true separate Power of Attorney (POA) document is desired. If not, leave the checkbox unselected.</inlineHelpText>
    <label>Form Power Of Attorney Indicator</label>
    <type>Checkbox</type>
</CustomField>