force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/WKDDP__nCino_Code__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__nCino_Code__c</fullName>
    <description>This optional text field houses the middleware code that designates which schema roles are added to the entity. It is visible to administrators.</description>
    <inlineHelpText>Populate this field with the corresponding role code.</inlineHelpText>
    <label>nCino Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>