force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/WKDDP__Personal_Agent_Durable_Indicator__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Personal_Agent_Durable_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field if any personal agent assigned on the account is durable (continues after the legal incompetency of the account holder and terminating only at death). By default, this field is false.</description>
    <inlineHelpText>Select the checkbox to indicate that any personal agent assigned on the account is durable.</inlineHelpText>
    <label>Personal Agent Durable Indicator</label>
    <type>Checkbox</type>
</CustomField>