force-app/main/default/objects/LLC_BI__Ownership_Structure_Role__c/fields/WKDDP__Relationship_Description__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Relationship_Description__c</fullName>
    <description>Users populate this optional text field with a description of the relationship between the fiduciary (POA) and the account.</description>
    <inlineHelpText>Enter the description of the relationship between the fiduciary (POA) and the account.</inlineHelpText>
    <label>Relationship Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>